# marian-lite

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Config.amd64.cmake.in  Config.arm.cmake.in  Config.cmake.in  README.md  marian-lite.pc.in
.github/workflows/: macos-wasm.yml  macos.yml  native-customized_marian-macos.yml  ubuntu.yml  wasm-customized_marian-macos.yml  wasm-customized_marian-ubuntu.yml  windows.yml
cmake/: CompilerStuff.cmake  DownloadAllTheThings.cmake  FindSQLite3.cmake  FindSSE.cmake
debian/: changelog  control  rules
src/: CMakeLists.txt  marian.h
src/command/: marian_conv.cpp
src/common/: aliases.cpp  binary.cpp  binary.h  build_info.cpp.in  cli_helper.cpp  cli_helper.h  cli_wrapper.cpp  cli_wrapper.h  config.cpp  config.h  config_parser.cpp  config_parser.h  config_validator.cpp  config_validator.h  definitions.h  fastopt.cpp  fastopt.h  file_stream.cpp  file_stream.h  file_utils.cpp  file_utils.h  filesystem.h  hash.h  intrusive_ptr.h  io.cpp  io.h  io_item.h  logging.cpp  logging.h  options.cpp  options.h  shape.h  signal_handling.cpp  types.cpp  types.h  utils.cpp  version.cpp
src/data/: alignment.cpp  batch.h  batch_generator.h  batch_stats.h  corpus.cpp  corpus.h  corpus_base.cpp  corpus_base.h  corpus_nbest.cpp  corpus_nbest.h  dataset.h  default_vocab.cpp  factored_vocab.cpp  factored_vocab.h  rng_engine.h  sentencepiece_vocab.cpp  sentencepiece_vocab.h  shortlist.cpp  shortlist.h  text_input.cpp  text_input.h  types.h  vocab.cpp  vocab.h  vocab_base.h
src/embedder/: embedder.h
src/functional/: approx.h  array.h  floats.h  functional.h  operands.h  operators.h  predicates.h  shape.h  tensor.h  tmp.h
src/graph/: auto_tuner.h  chainable.h  expression_graph.cpp  expression_graph.h  expression_operators.cpp  expression_operators.h  node.cpp  node.h  node_initializers.cpp  node_initializers.h  node_operators.cpp  node_operators.h  node_operators_binary.h  node_operators_tuple.h  node_operators_unary.h  parameters.h
src/layers/: constructors.h  convolution.cpp  convolution.h  factory.h  generic.cpp  generic.h  guided_alignment.h  loss.cpp  loss.h  lsh.cpp  lsh.h  weight.cpp  weight.h  word2vec_reader.h
src/models/: amun.h  bert.h  char_s2s.h  classifier.h  costs.h  decoder.h  encoder.h  encoder_classifier.h  encoder_decoder.cpp  encoder_decoder.h  encoder_pooler.h  laser.h  model_base.h  model_factory.cpp  model_factory.h  nematus.h  pooler.h  s2s.h  states.h  transformer.h  transformer_factory.h  transformer_stub.cpp
src/optimizers/: clippers.cpp  clippers.h  optimizers.cpp  optimizers.h  quantizer.cpp  quantizer.h
src/rescorer/: score_collector.h
src/tensors/: allocator.h  backend.cpp  backend.h  device.h  memory_piece.h  rand.cpp  rand.h  tensor.cpp  tensor.h  tensor_allocator.h  tensor_operators.h
src/tensors/cpu/: add.h  aligned.h  backend.h  device.cpp  element.h  expression_graph_packable.h  integer_common.cpp  integer_common.h  intgemm_interface.h  prod.cpp  prod_blas.h  ruy_interface.h  tensor_operators.cpp  topk.cpp  wasm_intgemm_fallback.cpp  wasm_intgemm_interface.h
src/tensors/cpu/fbgemm/: expanded_gemm.h  packed_gemm.cpp  packed_gemm.h
src/tests/: CMakeLists.txt  sentencepiece_norm.cpp
src/training/: communicator.h
src/translator/: beam_search.cpp  beam_search.h  helpers.cpp  helpers.cu  helpers.h  history.h  hypothesis.h  nth_element.cpp  nth_element.cu  nth_element.h  output_collector.cpp  output_collector.h  output_printer.h  scorers.cpp  scorers.h  translator.h
wasm/: Dockerfile  Makefile  README.md  custom_shell.html  package-benchmark.sh  pre-module.js
